[fix] giocato con la scrollbar

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,6 +31,21 @@ img {
   max-width: 100%;
 }
 
+/* SCROLLBAR */
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background: #222222; 
+}
+
+::-webkit-scrollbar-thumb {
+  background: #4b4b4b; 
+}
+
+
 /* HEADER  */
 
 header {
